Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<html>
+<HTML>
 <head>
 
   <head>
@@ -12,4 +12,4 @@
 
 
 
-  <html>
+  <HTML>
